@@ -9,7 +9,8 @@
 
 const char *__mingw_get_crt_info (void)
 {
-  return "MinGW-W64 Runtime " __MINGW64_VERSION " ("
+  return "MinGW-W64 Runtime " __MINGW64_VERSION_STR " ("
          __MINGW64_VERSION_STATE " - "
 	 "rev. " __MINGW_W64_REV ") " __MINGW_W64_REV_STAMP;
 }
+
