@@ -12,7 +12,7 @@
 
 #define __MINGW64_VERSION_MAJOR	1
 #define __MINGW64_VERSION_MINOR	0
-#define __MINGW64_VERSION	STRINGIFY(__MINGW64_VERSION_MAJOR) "." STRINGIFY(__MINGW64_VERSION_MINOR)
+#define __MINGW64_VERSION_STR	STRINGIFY(__MINGW64_VERSION_MAJOR) "." STRINGIFY(__MINGW64_VERSION_MINOR)
 #define __MINGW64_VERSION_STATE	"beta"
 
 /* mingw.org's version macros: these make gcc to define
